# six-axis-robotic-arm-simulation

./: CMakeLists.txt  README.md
install/: local_setup.sh  setup.sh
install/my_robot/share/ament_index/resource_index/package_run_dependencies/: my_robot
install/my_robot/share/my_robot/: package.ps1  package.sh
install/my_robot/share/my_robot/cmake/: my_robotConfig.cmake
install/my_robot/share/my_robot/launch/: display.launch.py
install/my_robot/share/my_robot/urdf/: robot_arm.urdf
log/: latest_build
src/: ik_solver.cpp
urdf/: robot_arm.urdf
